# beach-cleaning-object-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
Datasets/: info.md
Datasets/trash_detection.minimal_example.yolov5pytorch/: README.dataset.txt  README.roboflow.txt  data.yaml
Datasets/trash_detection.minimal_example.yolov5pytorch/train/: labels.cache
Datasets/trash_detection.minimal_example.yolov5pytorch/valid/: labels.cache
JPG Compression/: compression.py
Models/: info.md
Models/beachbot_yolov5s_trash_detection__minimal_example__yolov5pytorch_160/: export_info.yaml  model.yaml  results.csv
Notebooks/: Deploy_opencv.ipynb  Display_dataset.ipynb  Display_training_results.ipynb  Download_dataset_roboflow.ipynb  Eval_Loss.ipynb  Install_YOLO.ipynb  Install_YOLO.py  Train_Torchvision.ipynb  Train_YOLO.ipynb  Train_YOLO_server.py  Train_YOLO_server_finetune.py
app/: dataset_analyzer_ui.py  video_analyzer_ui.py
config/: roboflow_version_config.yaml
docker/: Dockerfile
scripts/: Train_YOLO_server.py  classificationloss.py  mediapipe_train.py  model_evaluate.py  roboflow_create_version.py  roboflow_get_dataset.py
src/: inference.py  inference_file.py  requirements.txt  train_yolo5.py
src/beachbot_od/: __init__.py  config.py  huggingface_get_model.py  model_evaluate.py  roboflow_get_dataset.py
src/beachbot_od/evaluation/: model_evaluate.py
src/beachbot_od/huggingface_api/: get_model.py  modelcard_generate.py
src/beachbot_od/roboflow_api/: __init__.py  roboflow_api.py  roboflow_create_version.py  (+1 more)
tests/: roboflow_test.py  train.py
(+97 files in other folders)
