[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "beachbot_od"
dynamic = ["version"]
authors = [
    { name = "Christopher Buckley"},
    { name = "Jeffrey Queisser"}
]
description = "Beachbot Object Detection. Applications, training, and evaluation"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
license = { text = "CC BY-NC 4.0" }

requires-python = ">=3.8, <3.11"

dependencies = [
    "globox==2.4.6",
    "torch==2.4.1",
    "roboflow==1.1.47",
    "keyring==25.4.1",
    "pandas==2.2.3",
    "ultralytics==8.3.13"
    "platformdirs==4.3.6"
]

[project.urls]
Source = "https://github.com/okinawa-ai-beach-robot/beach-cleaning-object-detection"
Issues = "https://github.com/okinawa-ai-beach-robot/beach-cleaning-object-detection/issues"

[tool.hatch.build.targets.sdist]
sources = ["src"]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.version]
source = "vcs"
fallback-version= "0.0.0"
#path = "src/beachbot/__init__.py"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"
